--- a/templates/admin_dashboard.xhtml
+++ b/templates/admin_dashboard.xhtml
@@ -54,7 +54,7 @@
 
 <tr metal:define-macro="admin_product_1">
     <td>12345</td>
-    <td>Photography Service - 01 </td>
+    <td>1 Day Camera Rental </td>
     <td style="text-align=">4</td>
     <td>$100.00</td>
 </tr>
