--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ a {
     padding: 0 30px;
     color: #2f2f2f;
     text-align: center;
-
+    cursor: pointer;
     text-transform: uppercase;
     text-decoration: none;
     white-space: nowrap;
