--- a/templates/admin_login.xhtml
+++ b/templates/admin_login.xhtml
@@ -3,16 +3,16 @@
     <div class="container">
         <div class="row">
             <div id="admin_login_box" class="">
-
-                <input class="admin_login_input" placeholder="USERNAME" type='text'></input>
+                <form id="loginForm">
+                <input id="user_name" class="admin_login_input" placeholder="USERNAME" type='text'></input>
             <br/>
-                <input class="admin_login_input" placeholder="PASSWORD" type='password'></input>
-        
-        <button id="admin_login_button" class='admin_login_button'>LOGIN</button>
+                <input id="password" class="admin_login_input" placeholder="PASSWORD" type='password'></input>
+                </form>
+        <button id="loginbutton" class='admin_login_button'>LOGIN</button>
         <button class='admin_forgot_button'>FORGOT PASSWORD</button>
+        <ul id="AJAXMessages"></ul>
             </div>
         </div>
     </div>
 </section>
-
 
