--- a/templates/nav.xhtml
+++ b/templates/nav.xhtml
@@ -2,11 +2,11 @@
 <nav id="nav" role="navigation" metal:define-macro="nav_bar">
     <div class="menu_simple">
         <ul>
-            <li><a href="cart.php" id="home_but">CART</a></li>
+            <li><a href="cart.php" id="cart_but">CART</a></li>
             <li><a href="index.php" id="home_but">HOME</a></li>
-            <li><a href="services.php">SERVICES</a></li>
-            <li><a href="rentals.php">RENTALS</a></li>
-            <li><a href="admin_login.php">LOGIN</a></li>
+            <li><a href="services.php" id="services_but">SERVICES</a></li>
+            <li><a href="rentals.php" id="rentals_but">RENTALS</a></li>
+            <li><a href="admin_login.php" id="admin_but">ADMIN</a></li>
         </ul>
         <br/>
     </div>
