--- a/templates/body_header.xhtml
+++ b/templates/body_header.xhtml
@@ -1,32 +1,36 @@
 <!-- View Fragment -->
-<div class="container" metal:define-macro="body_header">
-    <div class="row">
-        <div class="one-half column" style="margin-top: 10%">
+<div class="container" metal:define-macro="body_header" style="margin-top: 10%">
+		
+        <div class="one-half column">
+			
             <h1>PHOTO 4130</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut leo sed tortor rutrum sagittis eget dignissim arcu. Cras feugiat volutpat magna, at pellentesque lorem convallis et. </p>
+			
         </div>
-    <div class="one-half column" style="margin-top: 10%">
+    <div class="one-half column">
         <img src="http://placehold.it/280x150" style="width: 100%"/>
     </div>
+			
     </div>
-</div>
 
-<section class="divider_01" metal:define-macro="body_section">
-    <div class="container">
+    <div class="container" metal:define-macro="body_section">
+
+
         <div class="row">
             <div class="one-third column" style="margin-top: 10%">
                 <a href="#"><img src="http://placehold.it/280x200" style="width: 100%"/></a>
-                <p class="white-text">This CSS, font and favicon.</p>
+                <p class="white-text">START A CART</p>
             </div>
             
             <div class="one-third column" style="margin-top: 10%">
                 <a href="#"><img src="http://placehold.it/280x200" style="width: 100%"/></a>
-                <p>This index.html page is a placeholder with the CSS, font and favicon.</p>
+                <p>SERVICES</p>
             </div>
             <div class="one-third column" style="margin-top: 10%">
                 <a href="#"><img src="http://placehold.it/280x200" style="width: 100%"/></a>
-                <p>This index.html page is a placeholder with the CSS, font and favicon.</p>
+                <p>RENTALS</p>
             </div>
         </div>
-    </div>
-</section>
+
+
+		    </div>
