--- a/templates/body_header.xhtml
+++ b/templates/body_header.xhtml
@@ -4,7 +4,7 @@
         <div class="one-half column">
 			
             <h1>PHOTO 4130</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut leo sed tortor rutrum sagittis eget dignissim arcu. Cras feugiat volutpat magna, at pellentesque lorem convallis et. </p>
+            <p>Welcome to our photography rental site, formerly Aerial Aces. We seek to rent out good lenses and photos for great justice. Or to rule the world. We swear its only for good. </p>
 			
         </div>
     <div class="one-half column">
