index page update

--- a/templates/header.xhtml
+++ b/templates/header.xhtml
@@ -10,12 +10,13 @@
   <meta name="author" content=""/>
 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-	<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'/>
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="./img/favicon.ico" type="image/x-icon"/>
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'/>
 
   <link rel="stylesheet" href="./css/normalize.css" type="text/css"/>
   <link rel="stylesheet" href="./css/skeleton.css" type="text/css"/>
-	<link rel="stylesheet" href="./css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="./css/style.css" type="text/css"/>
 
   </head>
 
