--- a/templates/body_header.xhtml
+++ b/templates/body_header.xhtml
@@ -1,15 +1,14 @@
 <!-- View Fragment -->
 <div class="container" metal:define-macro="body_header" style="margin-top: 10%">
-		
+		    <div class="one-half column">
+        <img src="./img/LOGOCOMP4130.png" alt="" style="width: 100%"/>
+    </div>
         <div class="one-half column">
 			
-            <h1>PHOTO 4130</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut leo sed tortor rutrum sagittis eget dignissim arcu. Cras feugiat volutpat magna, at pellentesque lorem convallis et. </p>
+            <p>Welcome to our photography rental site, formerly Aerial Aces. We seek to rent out good lenses and photos for great justice. Or to rule the world. We swear its only for good.</p>
 			
         </div>
-    <div class="one-half column">
-        <img src="http://placehold.it/280x150" style="width: 100%"/>
-    </div>
+
 			
     </div>
 
@@ -18,19 +17,19 @@
 
         <div class="row">
             <div class="one-third column" style="margin-top: 10%">
-                <a href="#"><img src="http://placehold.it/280x200" style="width: 100%"/></a>
-                <p class="white-text">START A CART</p>
+                <a href="./cart.php"><img src="./img/cart.jpg" style="width: 100%"/></a>
+				<p>START A CART</p>
             </div>
             
             <div class="one-third column" style="margin-top: 10%">
-                <a href="#"><img src="http://placehold.it/280x200" style="width: 100%"/></a>
+                <a href="./services.php"><img src="./img/services.jpg" style="width: 100%"/></a>
                 <p>SERVICES</p>
             </div>
             <div class="one-third column" style="margin-top: 10%">
-                <a href="#"><img src="http://placehold.it/280x200" style="width: 100%"/></a>
+                <a href="./rentals.php"><img src="./img/rentals.jpg" style="width: 100%"/></a>
                 <p>RENTALS</p>
             </div>
         </div>
 
 
-		    </div>
+	</div>
